fix: spacing issues

--- a/pages/style.css
+++ b/pages/style.css
@@ -57,7 +57,7 @@ h2 {
 h3 {
   font-size: 2rem;
   line-height: 3rem;
-  text-align: center;
+  /* text-align: center; */
   color: var(--color-dark);
 }
 
@@ -189,6 +189,7 @@ li {
 .projects-container {
   -webkit-text-fill-color: rgba(0, 0, 0, 0.00001);
   padding: 10rem var(--padding-content-sides);
+  padding-right: calc(var(--padding-content-sides) - 6rem);
   background-color: var(--color-primary);
   z-index: -2;
 }
@@ -238,4 +239,13 @@ main {
 
 .projects-list li img {
   height: 22rem;
+}
+.projects-list li h3 {
+  text-align: center;
+}
+
+@media only screen and (max-width: 750px) {
+  main {
+    padding: 0 0;
+  }
 }
